--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
           <li><img src="sns5.jpg"></li>
           <li><img src="sns6.jpg"></li>
         </div>
+        <div class="ul4">
+          <li><img src="sns1.jpg"></li>
+          <li><img src="sns2.jpg"></li>
+        </div>
+        <div class="ul2">
+          <li><img src="sns3.jpg"></li>
+          <li><img src="sns4.jpg"></li>
+        </div>
       </ul>
     </section>
   </main>
