--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section>
       <h2>SNS</h2>
     </section>
-    <section id="sns">
+    <div id="sns">
       <ul>
         <div class="ul1">
           <li><img src="sns1.jpg"></li>
@@ -101,7 +101,7 @@
           <li><img src="sns4.jpg"></li>
         </div>
       </ul>
-    </section>
+    </div>
   </main>
 
   <div id="inquiry">
